FIX: gap after profile name decreased in notifications page

--- a/src/styles/_notifications.scss
+++ b/src/styles/_notifications.scss
@@ -245,7 +245,7 @@
   }
 
   .name {
-    margin-right: 6px;
+    margin-right: 4px;
   }
 }
 
